--- a/Grades/Views/Home/Index.cshtml
+++ b/Grades/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
 	<title>Insecure Grades</title>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-	<link rel="stylesheet" href="styles.css">
-	<script src="app.js" type="module" defer></script>
+	<link rel="stylesheet" href="~/styles.css">
+	<script src="~/app.js" type="module" defer></script>
 </head>
 <body>
 <div class="container">
