--- a/Grades/wwwroot/styles.css
+++ b/Grades/wwwroot/styles.css
@@ -11,6 +11,25 @@ body {
 	background-color: white;
 }
 
+form {
+	display: block;
+	max-width: 480px;
+	margin-left: auto;
+	margin-right: auto;
+	
+	text-align: center;
+	
+	padding-bottom: 1rem;
+}
+
+form label {
+	display: block;
+}
+
+form > input {
+	margin-top: 1rem;
+}
+
 h1 {
 	text-align: center;
 	padding-top: 1rem;
