Change interface language

--- a/Grades/Views/Home/Index.cshtml
+++ b/Grades/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 
 	<div class="btn-container">
 		<p>
-			<a href="#" class="btn" id="btn-get-score">View test score</a>
+			<a href="#" class="btn" id="btn-get-score">Bekijk testscore</a>
 		</p>
 		<p id="get-response">
 		</p>
@@ -24,7 +24,7 @@
 
 	<div class="btn-container">
 		<p>
-			<a href="#" class="btn" id="btn-login">Log in as student</a>
+			<a href="#" class="btn" id="btn-login">Log in als student</a>
 		</p>
 		<p id="login-response">
 		</p>
@@ -32,7 +32,7 @@
 
 	<div class="btn-container">
 		<p>
-			<a href="#" class="btn" id="btn-update-score">Change grade to 20/20</a>
+			<a href="#" class="btn" id="btn-update-score">Wijzig score naar 20/20</a>
 		</p>
 		<p id="update-response">
 		</p>
