--- a/Grades/Views/Home/Login.cshtml
+++ b/Grades/Views/Home/Login.cshtml
@@ -15,7 +15,7 @@
 
 	<form asp-action="Login" method="post">
 		<div class="input-group">
-			<label for="password">Password</label>
+			<label for="password">Wachtwoord</label>
 			<input type="password" name="password" id="password" />
 		</div>
 		
